# iq-rings-cpp

./: .gitignore  setup.py
configs/: exercise_junior25.json
configs/complited_exercises/: junior25.json
configs/details/: 00.json  01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  10.json  11.json
configs/exercises/: junior25.json
cpp/: CMakeLists.txt  code_deatcivation.md  test.cpp
cpp/src/: ExerciseJNI.cpp  details.hpp  elements.hpp  exercise.hpp  json.hpp  utils.hpp
info/: Details.md
kotlin/: BUILD.md  CMakeLists.txt  Exercise.kt  build.gradle  example.kt
make_lists/: python_CMakeLists.txt
native_engine/: CMakeLists.txt  test
native_engine/src/: ExerciseJNI.cpp
native_engine/src/headers/: details.hpp  elements.hpp  exercise.hpp  json.hpp
py/: CMakeLists.txt  exercise_wrapper.cpp  exercise_wrapper.pyx  make_configs.py
